Use a more reasonable z-index to avoid conflicts with feedback plugin.

--- a/css/main.css
+++ b/css/main.css
@@ -152,7 +152,7 @@
    height: 100%;
    position: absolute;
    top: 0;
-   z-index: 1000;
+   z-index: 50;
    width:100%;
 }
 .plugins p {
@@ -164,7 +164,7 @@
    bottom:0;
    height:25px;
    width:100%;
-   z-index:6000;
+   z-index:60;
    font-weight:bold;
 }
 .plugins .name {
